@@ -1,7 +1,0 @@
-// -*- C++ -*-
-#ifndef RIVET_CONSTRAINTS_HH
-#define RIVET_CONSTRAINTS_HH 1
-
-#include "Rivet/BeamConstraint.hh"
-
-#endif
