@@ -1,9 +1,10 @@
 // -*- C++ -*-
 #include "Rivet/Rivet.hh"
-#include "Rivet/RivetYODA.hh"
+#include "Rivet/Analysis.hh"
 #include "Rivet/AnalysisHandler.hh"
 #include "Rivet/AnalysisInfo.hh"
-#include "Rivet/Analysis.hh"
+#include "Rivet/RivetYODA.hh"
+#include "Rivet/BeamConstraint.hh"
 #include "Rivet/Tools/Logging.hh"
 
 namespace Rivet {
